styles.css
/* Universal styles for all elements */
* {
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
}

/* Container styles */
#container {
  width: 500px;
  margin: 0 auto; /* Centering the container */
}

/* List styles */
ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

ul li {
  padding: 10px;
  display: flex;
  justify-content: space-between;
  align-items: inherit;
  align-items: center;
}

ul li:hover {
  background: #f3f3f3;
}

/* Checkbox styles */
#list input {
  padding: 0;
  height: initial;
  width: initial;
  margin-bottom: 0;
  display: none;
  cursor: pointer;
}

#list label {
  position: relative;
  cursor: pointer;
}

#list label:before {
  content:'';
  /* -webkit-appearance: none; */
  background-color: transparent;
  border: 2px solid #0079bf;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
  padding: 10px;
  display: inline-block;
  position: relative;
  vertical-align: middle;
  cursor: pointer;
  margin-right: 10px;
}

#list input:checked + label:after {
  content: '';
  display: block;
  position: absolute;
  top: 2px;
  left: 9px;
  width: 6px;
  height: 14px;
  border: solid #fff;
  border-width: 0 2px 2px 0;
  transform: rotate(45deg);
}

#list input:checked + label:before {
  background: #0079bf;
}

#list input:checked + label {
  text-decoration: line-through;
}

/* Delete button styles */
.delete {
  height: 28px;
  padding: 5px 0px;
  border-radius: 3px;
}

.delete:hover {
  background: #f2f2f2;
  cursor: pointer;
}

/* Header styles */
h1 {
  text-align: center;
}

/* Add Task Input styles */
.add-task {
  width: 100%;
  outline: none;
  font-size: 15px;
  padding: 11px;
  border: 1px solid #f3f3f3;
  margin-bottom: 3px;
}

/* Total Tasks styles */
#total-tasks {
  margin-bottom: 20px;
  font-size: 13px;
  margin-left: 2px;
  color: gray;
}

